<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/express_detail_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/express_detail_title_txt"
            android:textColor="#868686"
            android:textSize="@dimen/express_detail_text_size"
            android:layout_marginRight="@dimen/express_detail_title__margin_right"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/express_detail_number_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/express_detail_title_txt"
            android:textSize="@dimen/express_detail_text_size"
            android:text="1234253453"
            android:textColor="@color/express_detail_content"
            />
        <TextView
            android:id="@+id/express_detail_deliverystatus_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/express_detail_text_size"
            android:text="@string/express_detail_deliverystatus_title"
            android:layout_below="@+id/express_detail_title_txt"
            android:layout_marginRight="@dimen/express_detail_title__margin_right"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/express_detail_deliverystatus_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/express_detail_text_size"
            android:layout_toRightOf="@id/express_detail_deliverystatus_title_txt"
            android:layout_below="@+id/express_detail_number_txt"
            android:textColor="@color/express_detail_content"
            android:text="派送中"/>
        <TextView
            android:id="@+id/express_detail_company_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/express_detail_text_size"
            android:text="@string/express_detail_company_title"
            android:layout_marginRight="@dimen/express_detail_title__margin_right"
            android:layout_below="@+id/express_detail_deliverystatus_title_txt"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/express_detail_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/express_detail_text_size"
            android:layout_toRightOf="@+id/express_detail_company_title"
            android:layout_below="@+id/express_detail_deliverystatus_txt"
            android:textColor="@color/express_detail_content"
            android:text="顺丰快递"/>


    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_express_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

</LinearLayout>
